src/Report.txt
src/page.c: In function ‘allocate_physical_pages’:
src/page.c:66:17: error: implicit declaration of function ‘free_physical_pages’; did you mean ‘allocate_physical_pages’? [-Wimplicit-function-declaration]
   66 |                 free_physical_pages(allocd_list);
      |                 ^~~~~~~~~~~~~~~~~~~
      |                 allocate_physical_pages
src/page.c: At top level:
src/page.c:81:6: warning: conflicting types for ‘free_physical_pages’; have ‘void(struct ppage *)’
   81 | void free_physical_pages(struct ppage *ppage_list) {
      |      ^~~~~~~~~~~~~~~~~~~
src/page.c:66:17: note: previous implicit declaration of ‘free_physical_pages’ with type ‘void(struct ppage *)’
   66 |                 free_physical_pages(allocd_list);
      |                 ^~~~~~~~~~~~~~~~~~~
make: *** [Makefile:34: obj/page.o] Error 1


